syntax = "proto3";

option go_package="github.com/nguyentrunghieu15/be-beehome-prj/proto/proapi";

message Provider {
    string id = 1;
    string created_at = 2;
    string created_by = 3;
    string updated_at = 4;
    string updated_by = 5;
    string deleted_by = 6;
    string deleted_at = 7;
    string name = 8;
    string introduction = 9;
    int32 years = 11;
    int32 postal_code_id = 10;
    string user_id = 12;
}

message PostalCode {
    int32 id = 1;
    string country_code = 2;
    string zipcode = 3;
    string place = 4;
    string state = 5;
    string state_code = 6;
    string province = 7;
    string province_code = 8;
    string community = 9;
    string community_code = 10;
    double latitude = 11;
    double longitude = 12;
}

message Review {
    string id = 1;
    string created_at = 2;
    string created_by = 3;
    string updated_at = 4;
    string updated_by = 5;
    string deleted_by = 6;
    string deleted_at = 7;
    string user_id = 8;
    string provider_id = 9;
    int32  rating = 10;
    string comment = 11;
    string reply = 12;
    int32 service_id = 13;
}

message GroupService {
    string id = 1;
    string created_at = 2;
    string created_by = 3;
    string updated_at = 4;
    string updated_by = 5;
    string deleted_by = 6;
    string deleted_at = 7;
    string name = 8;
    string detail = 9;
}

message Service {
    string id = 1;
    string created_at = 2;
    string created_by = 3;
    string updated_at = 4;
    string updated_by = 5;
    string deleted_by = 6;
    string deleted_at = 7;
    string name = 8;
    string detail = 9;
    double price = 10;
    string unit_price = 11;
}

message PaymentMethod {
    string id = 1;
    string created_at = 2;
    string created_by = 3;
    string updated_at = 4;
    string updated_by = 5;
    string deleted_by = 6;
    string deleted_at = 7;
    string name = 9;
}

message SocialMedia {
    string id = 1;
    string created_at = 2;
    string created_by = 3;
    string updated_at = 4;
    string updated_by = 5;
    string deleted_by = 6;
    string deleted_at = 7;
    string name = 8;
    string link = 9;
    string provider_id = 10;
}